// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> should display a default view 1`] = `
<div>
  <table
    class="table view-table globalNavStyles"
  >
    <thead
      class="tableHead"
    >
      <tr>
        <td
          class="cell-wrapper clickable d-none d-md-table-cell smallest cell-global-nav"
        >
          <div
            class="checkBox"
          >
            <label
              class="ui-label-label-3864 label checkBoxLabel"
              for="checkbox-2"
            >
              <input
                class="input"
                id="checkbox-2"
                name="checkbox-2"
                type="checkbox"
              />
            </label>
          </div>
        </td>
        <td>
          HeaderCell
        </td>
        <td>
          HeaderCell
        </td>
        <td>
          HeaderCell
        </td>
        <td>
          <div
            class="justify-content-end"
          >
            <div>
              ShowMoreFieldsDropdown
            </div>
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Row:
          <div>
            selectable: 
            true
          </div>
          <div>
            isSelected: 
            false
          </div>
          <button
            data-testid="click-item-152"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> should display a default view with no items 1`] = `
<div>
  <div>
    BlankState
    <div />
  </div>
  <div
    class="pl-4 mb-4"
  />
</div>
`;

exports[`<Table /> should display a default view with option selectable set to false 1`] = `
<div>
  <table
    class="table view-table globalNavStyles"
  >
    <thead
      class="tableHead"
    >
      <tr>
        <td>
          HeaderCell
        </td>
        <td>
          HeaderCell
        </td>
        <td>
          HeaderCell
        </td>
        <td>
          <div
            class="justify-content-end"
          >
            <div>
              ShowMoreFieldsDropdown
            </div>
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Row:
          <div>
            selectable: 
            false
          </div>
          <div>
            isSelected: 
            false
          </div>
          <button
            data-testid="click-item-152"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> should display a modified view with no items, should reset the view and fetch first items  1`] = `
[
  {
    "configName": "ticket",
    "type": "RESET_VIEW",
  },
]
`;

exports[`<Table /> should display a view with no fields 1`] = `
<div>
  <table
    class="table view-table globalNavStyles"
  >
    <thead
      class="tableHead"
    >
      <tr>
        <td
          class="cell-wrapper clickable d-none d-md-table-cell smallest cell-global-nav"
        >
          <div
            class="checkBox"
          >
            <label
              class="ui-label-label-3864 label checkBoxLabel"
              for="checkbox-1"
            >
              <input
                class="input"
                id="checkbox-1"
                name="checkbox-1"
                type="checkbox"
              />
            </label>
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Row:
          <div>
            selectable: 
            true
          </div>
          <div>
            isSelected: 
            false
          </div>
          <button
            data-testid="click-item-152"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> should select all items on the current page of the active view when there is a click on the "select all" checkbox 1`] = `
[
  {
    "ids": Immutable.List [
      152,
    ],
    "type": "UPDATE_PAGE_SELECTION",
  },
]
`;
